feat: 검색 XSS 보안 추가, hotfix: ERD 통일